--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.4.24",
     "swiper": "^11.1.14",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@vercel/storage": "^1.0.0",
+    "formidable": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
