--- a/package.json
+++ b/package.json
@@ -63,10 +63,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.4.24",
-    "swiper": "^11.1.14",
-    "xlsx": "^0.18.5",
-    "@vercel/storage": "^1.0.0",
-    "formidable": "^2.1.1"
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
