--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.4.24",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
